feat: parte do box onde vai ficar o input

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Input Verification E-mail</title>
 </head>
 <body>
+
+    <div class="con-input">
+        <input oninput="handleInput(event)" placeholder="Email" type="text">
+        <div class="icons">
+            <i class="bx bxs-check-circule check"></i>
+            <i class="bx bxs-x-circle x"></i>
+        </div>
+    </div>
     
 </body>
 </html>
