feat: css finalizado e começando js

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="mystle.css" media="all"/>   
     <title>Input Verification E-mail</title>
 </head>
 <body>
@@ -10,10 +11,11 @@
     <div class="con-input">
         <input oninput="handleInput(event)" placeholder="Email" type="text">
         <div class="icons">
-            <i class="bx bxs-check-circule check"></i>
-            <i class="bx bxs-x-circle x"></i>
+            <i class="iconify check" data-icon="bx-bxs-check-circle" data-inline="false"></i>            
+            <i class="iconify x" data-icon="bx-bxs-x-circle" data-inline="false"></i>
         </div>
     </div>
     
 </body>
+<script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
 </html>
